# FastCTQW

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_command.sh  pyproject.toml  setup.py
FastCTQW/: Ctqw.py  Operator.py  State.py  __init__.py
FastCTQW.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FastCTQW/fastexpm/: _wrapper.py
include/: MatrixExpCalculator.h
src/: MatrixExpCalculator.h  main.cu  matrix.cu  matrix.h
test/: benchmark_fastexpm.py  fastexpm_double_perf.csv  fastexpm_single_perf.csv  scipyexpm_double_perf.csv  scipyexpm_single_perf.csv  test.ipynb  test_fastCTQW.ipynb  test_scipy.ipynb
test/fastCTQW/: Ctqw.py  Operator.py  Plot.py  State.py
test/fastCTQW/fastexpm/: _wrapper.py
test/fastexpm/: _wrapper.py
